# wsrv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  readme.md  threadpool.hpp  workqueue.cpp
CMake/: install.cmake  setup.cmake
app/: CMakeLists.txt  app.cpp  connection_pool.hpp  context.cpp  context.hpp  routes.cpp  routes.hpp
app/libs/xdb/: CMakeLists.txt
app/libs/xdb/CMake/: dependencies.cmake  install.cmake  setup.cmake
app/libs/xdb/include/xdb/: query_result.hpp
app/libs/xdb/src/: CMakeLists.txt
app/libs/xdb/src/drivers/sqlite/: connection.hpp
app/util/: gpx.hpp  string_util.cpp  string_util.hpp  xml_pull_parser.cpp  xml_pull_parser.hpp
app/util/detail/: read_ahead_stream_adapter.hpp
app/web/public/css/: main.css
app/web/public/js/: admin-login.js  app.js  gallery.js  route-list.js  upload.js  waypoints.js
app/web/templates/: base.html.twig  landing.html.twig  route_list.html.twig  routes.html.twig
app/web/templates/admin/: dashboard.html.twig  login.html.twig  upload.html.twig
app/web/templates/routes/: edit.html.twig  gallery.html.twig  waypoints.html.twig
app/web/translations/: el_EL.json  en_US.json
data/templates/: field-errors.twig  page.html.twig  select_field.twig
include/ws/: client.hpp  dictionary.hpp  exceptions.hpp  filesystem.hpp  filter.hpp  filter_chain.hpp  fs_session_handler.hpp  fs_session_manager.hpp  logger.hpp  mailer.hpp  mime.hpp  request.hpp  request_context.hpp  request_handler.hpp  response.hpp  route.hpp  router.hpp  server.hpp  session.hpp  session_handler.hpp  session_manager.hpp  sqlite3_session_manager.hpp  url.hpp
include/ws/detail/: connection.hpp  connection_manager.hpp  io_service_pool.hpp  request_handler_factory.hpp  request_parser.hpp
include/ws/filters/: gzip_filter.hpp  request_logger.hpp  static_file_handler.hpp
include/wsrv/: application.hpp  blueprint.hpp  client.hpp  crypto.hpp  dictionary.hpp  exceptions.hpp  fs_session_manager.hpp  http_client.hpp  http_client_request.hpp  mailer.hpp  middleware.hpp  middleware_data.hpp  mime.hpp  request.hpp  request_handler.hpp  response.hpp  route.hpp  server.hpp  session.hpp  session_manager.hpp  sqlite3_session_manager.hpp  url.hpp  zstream.hpp
include/wsrv/auth/: authenticator.hpp  jwt_service.hpp
include/wsrv/forms/: form_builder.hpp  normalizers.hpp  validators.hpp
include/wsrv/middleware/: compress.hpp  csrf.hpp  locale.hpp  request_logger.hpp
include/wsrv/util/: logger.hpp
src/: CMakeLists.txt  Routing.md  application.cpp  base64.cpp  base64.hpp  client.cpp  client_async.cpp  connection_manager.cpp  crypto.cpp  dictionary.cpp  filesystem.cpp  filter_chain.cpp  fs_session_handler.cpp  fs_session_manager.cpp  http_client.cpp  http_client_request.cpp  http_parser.c  io_service_pool.cpp  mailer.cpp  mime.cpp  plugin_handler_factory.cpp  plugin_handler_factory.hpp  readme.md  request.cpp  request_context.cpp  request_parser.cpp  response.cpp  response_parser.cpp  route.cpp  server.cpp  server_impl.cpp  server_impl.hpp  session.cpp  session_handler.cpp  session_manager.cpp  smtp_socket.cpp  smtp_socket.hpp  sqlite3_session_manager.cpp  url.cpp  util.cpp  (+1 more)
src/auth/: authenticator.cpp  jwt_service.cpp
src/detail/: connection.hpp  connection_manager.hpp  crypto.hpp  filesystem.hpp  io_service_pool.hpp  request_parser.hpp  response_parser.hpp  util.hpp
src/filters/: gzip_filter.cpp  request_logger.cpp  static_file_handler.cpp
src/forms/: form_builder.cpp  normalizers.cpp  validators.cpp
src/middleware/: csrf.cpp  locale.cpp  request_logger.cpp
src/util/: logger.cpp
test/: CMakeLists.txt  test_auth.cpp  test_client.cpp  test_file_upload.cpp  test_forms.cpp  test_mailer.cpp  test_route.cpp  test_server.cpp  test_url.cpp
test/data/templates/: error-message.twig  field-errors.twig  forms.twig  input_field.twig  select_field.twig  test_form.html.twig
test/data/translations/: el_EL.json  en_US.json
